fixes overlapping columns

--- a/client/styles/less/app.less
+++ b/client/styles/less/app.less
@@ -9,16 +9,19 @@ body {
   margin-top: 0;
   width:23vw;
   margin-right:0;
+  z-index:10000;
 }
 .infopanel {
   background-color: #b2d1c8;
   left: 50px;
 }
+
 .graph {
   background-color: #857d87;
   margin-top: 20px;
   margin-left: 80px;
-  width: 45vw;
+  left: 20px;
+  width: 41vw;
   height: 87vh;
   border-style: inset;
   border-width: 5px;
